# SmartWheelsErlangen

./: CMakeLists.txt  CMakeLists.txt~  SWE_cameraCalibration.XML
description/: aadc.description  aadc_Backup.description  diff.txt  diff2.txt  swe.description  swe.description~  swe_old.description
include/: IBoundary.h  LineBoundary.cpp  swe_globalObjects.h~
src/: CMakeLists.txt  CMakeLists.txt~
src/SWE_AttitudeConverter/: CMakeLists.txt  CMakeLists.txt~  SWE_attitudeConverter.cpp  SWE_attitudeConverter.cpp~  SWE_attitudeConverter.h  attitudeConverter.h~  stdafx.h
src/SWE_BackLightsFinder/: CMakeLists.txt  SWE_BackLightsFinder.cpp  SWE_BackLightsFinder.h  stdafx.h
src/SWE_BirdEyeTransformation/: CMakeLists.txt  CMakeLists.txt~  SWE_BirdEyeTransformation.cpp  SWE_BirdEyeTransformation.cpp~  SWE_BirdEyeTransformation.h  SWE_BirdEyeTransformation.h~  stdafx.h
src/SWE_CooTransCamToFrontAxis/: CMakeLists.txt  CMakeLists.txt~  SWE_CooTransCamToFrontAxis.cpp  SWE_CooTransCamToFrontAxis.h
src/SWE_CooTransCamToFrontAxis/Backup/: filter.h  main.cpp  swe_cboundary.h
src/SWE_DistanceMeasurement/: CMakeLists.txt  SWE_DistanceMeasurement.cpp  SWE_DistanceMeasurement.h  SWE_Odometry.cpp~  SWE_Odometry.h.bak
src/SWE_Dummy/: CMakeLists.txt~  SWE_Dummy.cpp  SWE_Dummy.cpp~  SWE_Dummy.h  SWE_Dummy.h~
src/SWE_IntersecPointCalc/: CMakeLists.txt  CMakeLists.txt~  SWE_IntersecPointCalc.cpp  SWE_IntersecPointCalc.h  swe_cboundary.cpp  swe_cboundary.h  swe_globalObjects.cpp  swe_globalObjects.h
src/SWE_IntersecPointCalc/Backup/: SWE_IntersecPointCalc___.cpp  SWE_IntersecPointCalc___.h
src/SWE_KIControl/: CMakeLists.txt  CMakeLists.txt~  SWE_KIControl.cpp  SWE_KIControl.h
src/SWE_KIControl/Backup/: SWE_IntersecPointCalc.cpp
src/SWE_KuerTrackControl/: CMakeLists.txt  SWE_KuerTrackControl.cpp  SWE_KuerTrackControl.h
src/SWE_KuerTrackControl/old/: SWE_TrackControl.h
src/SWE_LaneDetection/: CMakeLists.txt  CMakeLists.txt~  SWE_BlobDescriptor.h  SWE_CatmullRomSpline.cpp  SWE_CatmullRomSpline.h  SWE_CrossingAnalyzer.cpp  SWE_CrossingAnalyzer.h  SWE_LaneDetection.cpp  SWE_LaneDetection.cpp~  SWE_LaneDetection.h  SWE_LaneDetection.h~  SWE_TemplateFilter.cpp~  SWE_TemplateFilter.h~  stdafx.h~
src/SWE_LightControl/: CMakeLists.txt  CMakeLists.txt~  SWE_LightControl.cpp  SWE_LightControl.h
src/SWE_LightControl/Backup/: SWE_IntersecPointCalc.h  filter.cpp  swe_cboundary.cpp
src/SWE_ObjectDetection/: CMakeLists.txt  SWE_ObjectDetection.cpp  SWE_ObjectDetection.h
src/SWE_Odometry/: CMakeLists.txt  CMakeLists.txt~  SWE_Odometry.cpp  SWE_Odometry.cpp.bak  SWE_Odometry.h  SWE_Odometry.h~  SWE_cSlidingWindow.cpp  SWE_cSlidingWindow.h  SWE_cSmartSlidingWindow.cpp  SWE_cSmartSlidingWindow.h  SWE_cSmartSlidingWindow.h~
src/SWE_PIDController/: CMakeLists.txt  CMakeLists.txt~  SWE_ControllerFilter.cpp  SWE_ControllerFilter.h  stdafx.h
src/SWE_ParkPilot/: CMakeLists.txt  SWE_ParkPilot.cpp  SWE_ParkPilot.h  stdafx.h
src/SWE_QRshield/: CMakeLists.txt  SWE_QRshield.cpp  SWE_QRshield.h  stdafx.h
src/SWE_SpeedControl/: CMakeLists.txt  CMakeLists.txt~  SpeedControl.cpp  SpeedControl.cpp~  SpeedControl.h  SpeedControl.h~  stdafx.h  stdafx.h~
src/SWE_SteeringControl/: CMakeLists.txt  CMakeLists.txt~  SWE_SteeringControl.cpp  SWE_SteeringControl.cpp~  SWE_SteeringControl.h  attitudeConverter.h~
src/SWE_StopLineDetection/: CMakeLists.txt  CMakeLists.txt~  SWE_StopLineDetection.cpp  SWE_StopLineDetection.h
src/SWE_TemplateFilter/: CMakeLists.txt  SWE_TemplateFilter.cpp  SWE_TemplateFilter.cpp~  SWE_TemplateFilter.h  SWE_TemplateFilter.h~
src/SWE_TrackControl/: CMakeLists.txt  CMakeLists.txt~  SWE_Maneuver.cpp  SWE_Maneuver.h  SWE_TrackControl.cpp  SWE_TrackControl.h  SWE_TrackControl__.h
src/SWE_TrackControl/old/: SWE_TrackControl__.cpp
src/SWE_TrajectoryPlanning/: CMakeLists.txt  CMakeLists.txt~  Polynomial.cpp  SWE_TrajectoryPlanning.cpp  SWE_TrajectoryPlanning.h  splineboundarycalcs.cpp  splineboundarycalcs.h
src/SWE_VideoPreprocessing/: CMakeLists.txt  SWE_VideoPreprocessing.cpp  SWE_VideoPreprocessing.h  stdafx.h
src/build-SWE_DistanceMeasurement-SomeKit-Default/: CMakeCache.txt
