include_directories(./include)

add_subdirectory(src/SWE_TemplateFilter)
add_subdirectory(src/SWE_LaneDetection)
add_subdirectory(src/SWE_TrackControl)
add_subdirectory(src/SWE_Odometry)
add_subdirectory(src/SWE_SpeedControl)
add_subdirectory(src/SWE_IntersecPointCalc)
add_subdirectory(src/SWE_KIControl)
add_subdirectory(src/SWE_Dummy)
add_subdirectory(src/SWE_SteeringControl)
add_subdirectory(src/SWE_LightControl)
add_subdirectory(src/SWE_DistanceMeasurement)
add_subdirectory(src/SWE_ObjectDetection)
add_subdirectory(src/SWE_QRshield)
add_subdirectory(src/SWE_CooTransCamToFrontAxis)
add_subdirectory(src/SWE_StopLineDetection)
add_subdirectory(src/SWE_BirdEyeTransformation)

