add_subdirectory(SWE_TemplateFilter)
add_subdirectory(SWE_LaneDetection)
add_subdirectory(SWE_TrackControl)
add_subdirectory(SWE_Odometry)
add_subdirectory(SWE_SpeedControl)
add_subdirectory(SWE_IntersecPointCalc)
add_subdirectory(SWE_KIControl)
add_subdirectory(SWE_Dummy)
add_subdirectory(SWE_SteeringControl)
add_subdirectory(SWE_LightControl)
add_subdirectory(SWE_DistanceMeasurement)
