add_subdirectory(SWE_TemplateFilter)
add_subdirectory(SWE_LaneDetection)
add_subdirectory(SWE_TrackControl)
add_subdirectory(SWE_Odometry)
add_subdirectory(SWE_SpeedControl)
add_subdirectory(SWE_IntersecPointCalc)
add_subdirectory(SWE_KIControl)
add_subdirectory(SWE_Dummy)
add_subdirectory(SWE_SteeringControl)
add_subdirectory(SWE_LightControl)
add_subdirectory(SWE_DistanceMeasurement)
add_subdirectory(SWE_ObjectDetection)
add_subdirectory(SWE_QRshield)
add_subdirectory(SWE_CooTransCamToFrontAxis)
add_subdirectory(SWE_StopLineDetection)
add_subdirectory(SWE_BirdEyeTransformation)
add_subdirectory(SWE_ParkPilot)
add_subdirectory(SWE_AttitudeConverter)
add_subdirectory(SWE_PIDController)
add_subdirectory(SWE_TrajectoryPlanning)
add_subdirectory(SWE_VideoPreprocessing)
